# nexus-shell

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AUTHORS.md  CITATION.cff  Dockerfile  FUNDING.yml  LICENSE  README.md  README.uk.md  docker-compose.yml  pyproject.toml
locales/en/: commands.ftl  errors.ftl  info.ftl  messages.ftl  models.ftl  status.ftl
locales/pl/: commands.ftl  errors.ftl  info.ftl  messages.ftl  models.ftl  status.ftl
locales/uk/: commands.ftl  errors.ftl  info.ftl  messages.ftl  models.ftl  status.ftl
src/: main.py  models.py  resolvers.py
src/ai/: abstract.py  chat_gpt.py  claude.py  gemini.py
src/config/: bot.py  config.py  encryption.py  firebase.py  mongo.py  postgres.py  redis.py  telegram.py
src/configs/: firebase_config.py  redis.py
src/storage/: abstract.py  firebase.py  firebase_manager.py  mongo.py
src/storage/orm/: init_models.py  postgres.py
src/storage/sql_alchemy/: init_models.py  manager.py  models.py  postgresql.py
src/utils/: constants.py  encryption.py  locale_manager.py  utils.py
tests/: test_ai_api_by_pytest.py  test_ai_api_by_unittest.py  test_gemini.py
