[project]
name = "nexus-shell"
version = "1.1.2"
description = "Nexus Shell AI Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.26.0",
    "aiogram-i18n==1.5",
    "anthropic==0.88.0",
    "cryptography==46.0.6",
    "firebase-admin==7.3.0",
    "fluent-runtime==0.4.0",
    "google-genai==1.70.0",
    "openai==2.30.0",
    "pydantic-settings==2.13.1",
    "pydantic==2.12.5",
    "redis==7.4.0",
    "sqlalchemy==2.0.48",
    "asyncpg==0.31.0",
    "pymongo==4.16.0",
]

[dependency-groups]
dev = [
    "pre_commit==4.5.1",
    "black==26.3.1",
    "isort==8.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true

[tool.isort]
profile = "black"
