[project]
name = "nexus-shell"
version = "1.1.2"
description = "Nexus Shell AI Agent"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram==3.27.0",
    "aiogram-i18n==1.5",
    "anthropic==0.97.0",
    "cryptography==47.0.0",
    "firebase-admin==7.4.0",
    "fluent-runtime==0.4.0",
    "google-genai==1.73.1",
    "openai==2.32.0",
    "pydantic-settings==2.14.0",
    "pydantic==2.12.5",
    "redis==7.4.0",
    "sqlalchemy==2.0.49",
    "asyncpg==0.31.0",
    "pymongo==4.17.0",
]

[dependency-groups]
dev = [
    "pre_commit",
    "black",
    "isort",
    "pytest",
    "pytest-asyncio",
]

[tool.black]
line-length = 88
target-version = ['py314']
skip-string-normalization = true

[tool.isort]
profile = "black"
